# tantivy

./: .gitignore  .travis.yml  LICENSE  README.md  index.js  package-lock.json  package.json
examples/: basic_search.js
native/: .npmignore  Cargo.toml  build.rs
native/src/: lib.rs
native/src/js_query_parser/: mod.rs  sane_query_parser.rs
native/src/js_schema_builder/: mod.rs  sane_schema_builder.rs
native/src/js_search/: mod.rs  sane_search.rs
native/src/js_top_docs/: mod.rs
native/src/optional_types/: mod.rs
