[package]
name = "tantivy-js"
version = "0.1.0"
authors = ["TheCallSign"]
edition = "2018"
build = "build.rs"

[lib]
name = "tantivyjs"
crate-type = ["dylib"]


[build-dependencies]
neon-build = "0.2.0"

[dependencies]
tempdir = "0.3.7"
neon = "0.2"
neon-serde = "0.1.1"
serde_derive = "1.0.85"
tantivy = { git = "https://github.com/tantivy-search/tantivy" }
serde = "1.0.85"
lazy_static = "1.3.0"
serde_json = "1.0.39" 