[package]
name = "tantivy-js"
version = "0.1.0"
authors = ["TheCallSign"]
edition = "2018"
build = "build.rs"

[lib]
name = "tantivyjs"
crate-type = ["dylib"]


[build-dependencies]
neon-build = "0.2.0"

[dependencies]
tempdir = "0.3.7"
neon = "^0.3"
neon-serde = "^0.3"
tantivy = { git = "https://github.com/tantivy-search/tantivy" }
serde = { version = "^1", features = ["derive"] }
lazy_static = "1.3.0"
serde_json = "^1"